# ccny_vision

ar_pose/: CMakeLists.txt
ar_pose/data/: object_4x4
artoolkit/: patch_auto_config
libartoolkit/: CMakeLists.txt  package.xml
libartoolkit/src/AR/: arDetectMarker.c
